tests/specs/ecosystem/dnbkr/cygnals/0_3_0.test
dnbkr/cygnals/0.3.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  E extends HTMLElement,
            ~~~~~~~~~~~
    at file://<tmpdir>/src/dom.ts:14:13

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
  V extends keyof HTMLElementEventMap
                  ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/dom.ts:15:19

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
>(element: E, event: V): Readable<HTMLElementEventMap[V] | undefined> {
                                  ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/dom.ts:16:35

Found 3 errors.

error: Type checking failed.

